--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -103,6 +103,13 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 		</dependency>
+		<!-- Source: https://mvnrepository.com/artifact/com.github.javaparser/javaparser-symbol-solver-core -->
+		<dependency>
+			<groupId>com.github.javaparser</groupId>
+			<artifactId>javaparser-symbol-solver-core</artifactId>
+			<version>3.28.0</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
